syntax = "proto3";

package fields;

option java_multiple_files = true;
option java_package = "grpc.tour.fields";

message TourIdField {
  int32 value = 1;
}