syntax = "proto3";

package request;

option java_multiple_files = true;
option java_package = "grpc.tour.dto.request";

import "tour/fields/tour-id-field.proto";

message CheckTourByIdRequest {
  fields.TourIdField tour_id = 1;
}